# readelf

./: CMakeLists.txt  README.md
include/: func.h
src/: func.c  main.c
